--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Hacktoberfest<span class="fuschia-color">JN</span> </h2>
     </div>
     <ul id="nav-links">
+        <li><a href="#signin" class="pink-color">Inscreva-se</a></li>
         <li><a href="#about">Sobre</a></li>
         <li><a href="#agenda">Agenda</a></li>
         <li><a href="#location">Local</a></li>
