--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
     </header>
 
+    <div class="section-group">
     <section id="about" class="dark-section">
         <h2>Sobre o Hacktoberfest</h2>
         <div class="content">
@@ -62,6 +63,7 @@
             </p>
         </div>
     </section>
+    </div>
 
     <section id="location" class="dark-section">
         <h2>Localização</h2>
