--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Hacktoberfest<span class="fuschia-color">JN</span> </h2>
         </div>
         <ul id="nav-links">
-            <li><a href="#signin" class="pink-color">Inscreva-se</a></li>
+            <!-- <li><a href="#subscribe" class="pink-color subscribe">Inscreva-se</a></li> -->
             <li><a href="#about">Sobre</a></li>
             <li><a href="#agenda">Programação</a></li>
             <li><a href="#location">Local</a></li>
@@ -35,41 +35,64 @@
         <div id="main-bg"></div>
         <img id="main-logo" src="./img/logo.png" />
         <div id="main-text">
-            <h2>03 de Outubro, no IFNMG - Campus Avançado Janaúba</h2>
+            <h2>03 de Outubro, no <span class="green-color">IFNMG</span> - Campus Avançado Janaúba</h2>
+            <h2 class="white-color"><small>Inscrições em Breve</small></h2>
         </div>
     </header>
 
     <div class="section-group">
-    <section id="about" class="dark-section">
-        <h2>Sobre o Hacktoberfest</h2>
-        <div class="content">
-            <p>
-                Hacktoberfest® é um evento que promove a participação na comunidade open source.
-                Comunidade esta, que cresce fortemente ano após ano. Junte se a nós, realize 4 pull requests e ganhe
-                uma edição limitada da camiseta oficial.
-            </p>
-            <p>Mais informações em <a href="https://hacktoberfest.digitalocean.com">hacktoberfest.digitalocean.com</a></p>
-        </div>
-    </section>
+        <section id="about" class="dark-section">
+            <h2>Sobre o HacktoberfestJN</h2>
+            <div class="content">
+                <p>
+                    O Hacktoberfest Janaúba celebra o Hacktoberfest, um evento que promove o Open-Source mundialmente.
+                    Participe do nosso encontro na Quinta-Feira (03/10), realize 4 pull requests em qualquer
+                    repositório público no Github e ganhe uma <span class="pink-color">camiseta</span>.
+                </p>
+                <!-- <p>
+                    <a href="">Inscreva-se</a>
+                </p> -->
+                <small>Mais informações em <a href="https://hacktoberfest.digitalocean.com">hacktoberfest.digitalocean.com</a></small>
+            </div>
+        </section>
 
-    <section id="agenda">
-        <h2>Programação</h2>
-        <div class="content">
-            <p>
-                <strong>14:00 | 16:00</strong> -- Introdução ao Open-Source, Git e Github
-            </p>
-            <p>
-                <strong>16:00 | 18:00</strong> -- HackTime: Mão na Massa!
-            </p>
-        </div>
-    </section>
+        <section id="agenda">
+            <h2>Programação</h2>
+            <div class="content">
+                <table>
+                    <tr>
+                        <th colspan="2" class="th-head">Quinta-Feira 03/10</th>
+                    </tr>
+                    <tr>
+                        <th>14:00 - 14:20</th>
+                        <td> Introdução ao Open-Source </td>
+                    </tr>
+                    <tr>
+                        <th>14:20 - 14:40</th>
+                        <td>Como usar Markdown</td>
+                    </tr>
+                    <tr>
+                        <th>14:40 - 15:20</th>
+                        <td>Git e Github</td>
+                    </tr>
+                    <tr>
+                        <th>15:20 - 16:00</th>
+                        <td>Issues e Pull Requests na Prática</td>
+                    </tr>
+                    <tr>
+                        <th>16:00 - 18:00</th>
+                        <td>HackTime: Mão na Massa!</td>
+                    </tr>
+                </table>
+            </div>
+        </section>
     </div>
 
     <section id="location" class="dark-section">
         <h2>Localização</h2>
         <div class="content">
             <p>
-                IFNMG - Campus Avançado Janaúba
+               IFNMG - Campus Avançado Janaúba
             </p>
             <div class="mapouter">
                 <div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=IFNMG%20Campus%20Avan%C3%A7ado%20Jana%C3%BAba&t=&z=15&ie=UTF8&iwloc=&output=embed"
