--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
             <h2>Sobre o HacktoberfestJN</h2>
             <div class="content">
                 <p>
-                    O Hacktoberfest Janaúba celebra o Hacktoberfest, um evento que promove o Open-Source mundialmente.
-                    Participe do nosso encontro na Quinta-Feira (03/10), realize 4 pull requests em qualquer
-                    repositório público no Github e ganhe uma <span class="pink-color">camiseta</span>.
+                    O <strong>Hacktoberfest Janaúba</strong> celebra o Hacktoberfest, um evento que promove o Open-Source mundialmente.
+                </p><p>Participe do nosso encontro na Quinta-Feira (03/10), realize 4 pull requests em qualquer
+                    repositório público no Github e ganhe uma <span class="pink-color">camiseta</span>
                 </p>
                 <!-- <p>
                     <a href="">Inscreva-se</a>
                 </p> -->
-                <small>Mais informações em <a href="https://hacktoberfest.digitalocean.com">hacktoberfest.digitalocean.com</a></small>
+                <small>Leia o nosso <a href="http://do.co/hacktoberconduct" target="_blank">código de conduta</a> antes de participar</small><br>
+                <small>Mais informações em <a href="https://hacktoberfest.digitalocean.com" target="_blank">hacktoberfest.digitalocean.com</a></small>
             </div>
         </section>
 
