share links fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Hacktoberfest Janaúba</title>
     <meta name="author" content="Carlos Magno">
     <meta name="description" content="Hacktoberfest Janaúba - MG Oficial">
-    <meta property="og:image" content="https://hacktoberfestjn.netlify.com/img/hacktoberfest-janauba.jpg">
+    <meta property="og:image" content="//hacktoberfestjn.netlify.com/img/hacktoberfest-janauba.jpg">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./fontawesome-free-5.11.2-web/css/all.min.css">
@@ -63,8 +63,7 @@
                     Compartilhe:<br>
                     <a class="fab fa-whatsapp-square whatsapp non-mobile" title="WhatsApp" href="https://web.whatsapp.com/send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"
                         target="_blank"></a>
-                    <a class="fab fa-whatsapp-square whatsapp mobile" title="WhatsApp" href=" whatsapp://send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"
-                        target="_blank"></a>
+                    <a class="fab fa-whatsapp-square whatsapp mobile" data-action="share/whatsapp/share" title="WhatsApp" href="whatsapp://send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"></a>
                     <a class="fab fa-telegram telegram" title="Telegram" href="https://telegram.me/share/url?url=https://hacktoberfestjn.netlify.com&text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!"
                         target="_blank"></a>
                 </p>
