--- a/index.html
+++ b/index.html
@@ -51,23 +51,27 @@
                 <p>
                     O <strong>Hacktoberfest Janaúba</strong> celebra o Hacktoberfest, um evento que promove o
                     Open-Source mundialmente.
-                </p>
-                <p>Participe do nosso encontro na Quinta-Feira (03/10), realize 4 pull requests em qualquer
-                    repositório público no Github e ganhe uma <span class="pink-color">camiseta</span>
+                </p><br>
+                <p class="quote">Junte-se a nós nesta quinta-feira (03/10), contribua com o Open-Source e ganhe uma <span class="pink-color">camiseta</span>.
                 </p>
                 <!-- <p>
                     <a href="">Inscreva-se</a>
                 </p> -->
                 <br>
                 <p>
+                    O encontro ocorrerá durante o minicurso <strong>"Como contribuir em um projeto Open-Source"</strong> na II Semana de Ciência e Tecnologia do <a href="#location">IFNMG - Campus Avançado Janaúba</a> das 14:00 às 18:00 da Quinta-Feira (03/10).
+                </p>
+                <br>
+                <p>
                     Compartilhe:<br>
                     <a class="fab fa-whatsapp-square whatsapp non-mobile" title="WhatsApp" href="https://web.whatsapp.com/send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"
                         target="_blank"></a>
-                    <a class="fab fa-whatsapp-square whatsapp mobile" data-action="share/whatsapp/share" title="WhatsApp" href="whatsapp://send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"></a>
+                    <a class="fab fa-whatsapp-square whatsapp mobile" data-action="share/whatsapp/share" title="WhatsApp"
+                        href="whatsapp://send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"></a>
                     <a class="fab fa-telegram telegram" title="Telegram" href="https://telegram.me/share/url?url=https://hacktoberfestjn.netlify.com&text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!"
                         target="_blank"></a>
                 </p>
-        
+
                 <small>Leia o nosso <a href="http://do.co/hacktoberconduct" target="_blank">código de conduta</a> antes
                     de participar</small><br>
                 <small>Mais informações em <a href="https://hacktoberfest.digitalocean.com" target="_blank">hacktoberfest.digitalocean.com</a></small>
@@ -79,27 +83,37 @@
             <div class="content">
                 <table>
                     <tr>
-                        <th colspan="2" class="th-head">Quinta-Feira 03/10</th>
+                        <th colspan="3" class="th-head">Quinta-Feira 03/10</th>
+                    </tr>
+                    <tr>
+                        <th class="th-head">Horário</th>
+                        <th class="th-head">Conteúdo</th>
+                        <th class="th-head">Sala</th>
                     </tr>
                     <tr>
                         <th>14:00 - 14:20</th>
                         <td> Introdução ao Open-Source </td>
+                        <td> Sala 03 </td>
                     </tr>
                     <tr>
                         <th>14:20 - 14:40</th>
                         <td>Como usar Markdown</td>
+                        <td> Sala 03 </td>
                     </tr>
                     <tr>
                         <th>14:40 - 15:20</th>
                         <td>Git e Github</td>
+                        <td> Sala 03 </td>
                     </tr>
                     <tr>
                         <th>15:20 - 16:00</th>
                         <td>Issues e Pull Requests na Prática</td>
+                        <td> Sala 03 </td>
                     </tr>
                     <tr>
                         <th>16:00 - 18:00</th>
                         <td>HackTime: Mão na Massa!</td>
+                        <td> Lab 01 e Lab 02 </td>
                     </tr>
                 </table>
             </div>
@@ -119,6 +133,13 @@
 
         </div>
     </section>
+
+    <!-- <section id="rules">
+        <h2>Regulamento</h2>
+        <div class="content">
+
+        </div>
+    </section> -->
 
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/main.js"></script>
