--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Hacktoberfest<span class="fuschia-color">JN</span></h2>
         </div>
         <ul id="nav-links">
-            <!-- <li><a href="#subscribe" class="pink-color subscribe">Inscreva-se</a></li> -->
+            <li><a target="_blank" href="https://www.even3.com.br/semanacienciaetecnologiajanauba/" class="pink-color subscribe">Inscreva-se</a></li>
             <li><a href="#about">Sobre</a></li>
             <li><a href="#agenda">Programação</a></li>
             <li><a href="#location">Local</a></li>
@@ -40,7 +40,7 @@
         <img id="main-logo" src="./img/logo.png" />
         <div id="main-text">
             <h2>03 de Outubro, no <span class="green-color">IFNMG</span> - Campus Avançado Janaúba</h2>
-            <h2 class="white-color"><small>Inscrições em Breve</small></h2>
+            <h2 class="white-color"><small>Inscrições Abertas</small></h2>
         </div>
     </header>
 
@@ -52,16 +52,18 @@
                     O <strong>Hacktoberfest Janaúba</strong> celebra o Hacktoberfest, um evento que promove o
                     Open-Source mundialmente.
                 </p><br>
-                <p class="quote">Junte-se a nós nesta quinta-feira (03/10), contribua com o Open-Source e ganhe uma <span class="pink-color">camiseta</span>.
+                <p class="quote">Junte-se a nós nesta quinta-feira (03/10), contribua com o Open-Source e ganhe uma
+                    <span class="pink-color">camiseta</span>.
                 </p>
-                <!-- <p>
-                    <a href="">Inscreva-se</a>
-                </p> -->
                 <br>
                 <p>
-                    O encontro ocorrerá durante o minicurso <strong>"Como contribuir em um projeto Open-Source"</strong> na II Semana de Ciência e Tecnologia do <a href="#location">IFNMG - Campus Avançado Janaúba</a> das 14:00 às 18:00 da Quinta-Feira (03/10).
+                    O encontro ocorrerá durante o minicurso <strong>"Como contribuir em um projeto Open-Source"</strong>
+                    na II Semana de Ciência e Tecnologia do <a href="#location">IFNMG - Campus Avançado Janaúba</a> das
+                    14:00 às 18:00 da Quinta-Feira (03/10).
                 </p>
                 <br>
+                <a href="https://www.even3.com.br/semanacienciaetecnologiajanauba/" target="_blank" class="button">Increva-se</a>
+                <br><br>
                 <p>
                     Compartilhe:<br>
                     <a class="fab fa-whatsapp-square whatsapp non-mobile" title="WhatsApp" href="https://web.whatsapp.com/send?text=HacktoberfestJN:%20Celebre%20o%20Open-Source%20e%20ganhe%20uma%20camiseta!%0Ahttps://hacktoberfestjn.netlify.com"
