--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="WQknsRBG_BEkoT_i_AFo2C4QEL5TX68rwxtykAdvPZE" />
     <title>Hacktoberfest Janaúba</title>
     <meta name="author" content="Carlos Magno">
     <meta name="description" content="Hacktoberfest Janaúba - MG Oficial">
