Incluir self na sessao galeria

--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
         </section>
     </div>
 
+    <section id="galeria" class="dark-section">
+        <h2>Galeria</h2>
+        <div class="content">
+            <img src="./img/self01.jpg"></img>
+
+        </div>
+    </section>
+
+
     <section id="location" class="dark-section">
         <h2>Localização</h2>
         <div class="content">
