Removi o link de inscrição
Eu removi o link de inscrição, pois o evento já foi encerrado.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     14:00 às 18:00 da Quinta-Feira (03/10).
                 </p>
                 <br>
-                <a href="https://www.even3.com.br/semanacienciaetecnologiajanauba/" target="_blank" class="button">Increva-se</a>
+                <a class="button">*inscrições encerradas</a>
                 <br><br>
                 <p>
                     Compartilhe:<br>
