Fix galeria image width

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     14:00 às 18:00 da Quinta-Feira (03/10).
                 </p>
                 <br>
-                <a class="button">*inscrições encerradas</a>
+                <a class="button">Inscrições encerradas</a>
                 <br><br>
                 <p>
                     Compartilhe:<br>
